--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,34 +1,23 @@
-# ========== DB ==========
+# ========== ✅ DB 연결 설정 ==========
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=hr
 spring.datasource.password=zxcv1234
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
-# ========== JSP ==========
+# ========== ✅ JSP 설정 ==========
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 spring.web.resources.static-locations=classpath:/static/
 
-# ========== MyBatis ==========
+# ========== ✅ MyBatis 설정 ==========
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.example.demo.vo
 
-# ========== 카카오 로그인 ==========
-kakao.rest-api-key=290ec4c3477f4e0f7ac02a0b468ddafa
-kakao.redirect-uri=https://b27b-210-183-163-229.ngrok-free.app/oauth/kakao/callback
+# ========== ✅ Kakao 로그인 설정 (직접 구현용) ==========
+kakao.rest-api-key=258fb141165b1f58e8cb1847169c112f
+kakao.redirect-uri=http://localhost:8080/oauth/kakao/callback
 
-spring.security.oauth2.client.registration.kakao.client-id=290ec4c3477f4e0f7ac02a0b468ddafa
-spring.security.oauth2.client.registration.kakao.redirect-uri=${kakao.redirect-uri}
-spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
-spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email
-
-spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
-spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
-spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
-spring.security.oauth2.client.provider.kakao.user-name-attribute=id
-
-# ========== 기타 ==========
+# ========== ✅ 기타 서버 설정 ==========
 server.servlet.session.tracking-modes=cookie
 server.tomcat.parse-semaparams=false
 server.use-forward-headers=true
